# Visual-Inference

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: Brendon_Analysis.Rmd  Brendon_EDA.Rmd  EDA.ipynb  Murray_Analysis.qmd
presentation/: main.py  requirments.txt
reports/: proposal.md
src/data/: Wills_data_corrected.csv  WittData.csv  WittData_AHRev052324.csv  Witt_Dots.csv  Witt_data_cookbook.txt  desc_Witt_Dots.txt  preprocessing.py
