[tool.poetry]
name = "Visual Inference"
version = "0.1.0"
description = "Analysis of data from a study of the use of visual processing for statistical inference"
authors = [
    "Rodney Murray <rodney.murray@colostate.edu>",
    "Brenden Stanley <Brendon.Stanley@rams.colostate.edu>",
]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.2"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
joblib = "^1.3.2"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"
jupyter = "^1.0.0"
pytest = "^7.2.0"
ipython = "^8.8.0"
black = "^22.12.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
